--- a/BootcampStats.ipynb
+++ b/BootcampStats.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Now let's look at the second question of interest.  That is - What does the data suggest of Bootcamp grads in terms of job placement and salary?\n",
     "\n",
-    "Again, let's read in the data and necessary libraries."
+    "Again, let's read in the data and necessary libraries!"
    ]
   },
   {
